<resources>
    <string name="app_name">Alfred Asistente</string>
    <string name="drawer_open">Abrir Menu</string>
    <string name="drawer_close">Cerrar Menu</string>
    <string name="dialog_cancel">CANCELAR</string>

    <string-array name="menu_items_array">
        <item>Realizar Entrevista</item>
        <item>Sugerencias</item>
        <item>Tareas</item>
        <item>Aprendizaje</item>
        <item>Areas de mi Negocio</item>
        <item>Mi F.O.D.A.</item>
        <item>Riesgos</item>
    </string-array>

    <string name="title_activity_learn">LearnActivity</string>
    <string name="externo">Externo</string>
    <string name="interno">Interno</string>
    <string name="title_activity_areas">Areas</string>
    <string name="title_activity_tasks">Tareas, Objetivos y Planes</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Registrarse">Registrarse</string>
    <string name="registrarse_titulo">Registrarse</string>

    <string name="recycler_tasks_empty">No hay tareas creadas en este plan \n\nEmpiece creando una</string>

    <string name="tasks_description">Descripcion de la tarea</string>
    <string name="tasks_repeat">Repetir</string>
    <string name="tasks_reminder">Durante</string>
    <string name="tasks_quantity">99</string>
    <string name="tasks_cancel">CANCELAR</string>
    <string name="tasks_create">CREAR TAREA!</string>
    <string name="tasks_accept">ACEPTAR</string>

    <string name="day">Diariamente</string>
    <string name="week">Semanalmente</string>
    <string name="month">Mensualmente</string>
    <string name="year">Anualmente</string>

    <string-array name="task_unit_interval">
        <item name="day">@string/day</item>
        <item name="week">@string/week</item>
        <item name="month">@string/month</item>
        <item name="year">@string/year</item>
    </string-array>

    <string-array name="valores_riesgos">
        <item name="Alta">Alta</item>
        <item name="Media">Media</item>
        <item name="Baja">Baja</item>
    </string-array>

    <string-array name="impacto_riesgo">
        <item name="Alto">Alto</item>
        <item name="Medio">Medio</item>
        <item name="Bajo">Bajo</item>
    </string-array>

    <string-array name="all_plans">
        <item>Plan Comercial</item>
        <item>Plan de Comunicación</item>
        <item>Plan de Administración</item>
    </string-array>

    <!-- AREAS -->

    <!-- Segmento de Clientes -->
    <string name="segmento_clientes_nombre">Segmento de Clientes</string>
    <string name="segmento_clientes_descripcion_corta">Descripcion Corta</string>
    <string name="segmento_clientes_descripcion_larga">Descripcion Completa</string>

    <!-- Relaciones con Clientes -->
    <string name="relaciones_clientes_nombre">Relaciones con Clientes</string>
    <string name="relaciones_clientes_descripcion_corta">Descripcion Corta</string>
    <string name="relaciones_clientes_descripcion_larga">Descripcion Completa</string>

    <!-- Canales -->
    <string name="canales_nombre">Canales</string>
    <string name="canales_descripcion_corta">Descripcion Corta</string>
    <string name="canales_descripcion_larga">Descripcion Completa</string>

    <!-- Propuesta de Valor -->
    <string name="propuesta_valor_nombre">Propuesta de Valor</string>
    <string name="propuesta_valor_descripcion_corta">Descripcion Corta</string>
    <string name="propuesta_valor_descripcion_larga">Descripcion Completa</string>

    <!-- Actividades Clave -->
    <string name="actividades_clave_nombre">Actividades Clave</string>
    <string name="actividades_clave_descripcion_corta">Descripcion Corta</string>
    <string name="actividades_clave_descripcion_larga">Descripcion Completa</string>

    <!-- Recursos Clave -->
    <string name="recursos_clave_nombre">Recursos Clave</string>
    <string name="recursos_clave_descripcion_corta">Descripcion Corta</string>
    <string name="recursos_clave_descripcion_larga">Descripcion Completa</string>

    <!-- Socios Clave -->
    <string name="socios_clave_nombre">Socios Clave</string>
    <string name="socios_clave_descripcion_corta">Descripcion Corta</string>
    <string name="socios_clave_descripcion_larga">Descripcion Completa</string>

    <!-- Fuentes de Ingreso -->
    <string name="fuentes_ingreso_nombre">Fuentes de Ingreso</string>
    <string name="fuentes_ingreso_descripcion_corta">Descripcion Corta</string>
    <string name="fuentes_ingreso_descripcion_larga">Descripcion Completa</string>

    <!-- Costos -->
    <string name="costos_nombre">Costos</string>
    <string name="costos_descripcion_corta">Descripcion Corta</string>
    <string name="costos_descripcion_larga">Descripcion Completa</string>

    <!-- LEARN -->
    <string name="learn_generic_error">Ops, algo salió mal</string>
    <string name="learn_error_fetching_articles">Ops, algo salió mal</string>
    <string name="learn_fetching_query">Entendiendo tus necesidades…</string>
    <string name="learn_fetching_articles">Buscando los mejores artículos…</string>
    <string name="learn_fetching_favorites">Buscando tus favoritos…</string>
    <string name="learn_options_terms_title">Términos de búsqueda</string>
    <string name="learn_options_show_articles">Ver artículos recomendados</string>
    <string name="learn_options_show_favorites">Ver artículos favoritos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ERRORS -->
    <string name="ERROR_EMPTY_FIELDS">Por favor ingrese todos los campos</string>
    <string name="ERROR_INVALID_EMAIL">El email no es valido, por favor reviselo</string>
    <string name="ERROR_PASSWORD_NOT_EQUALS">No coinciden las contraseñas</string>
    <string name="ERROR_STANDARD">Hubo un error de conexión, por favor Ingrese de forma manual</string>
    <string name="ERROR_LOGIN">Compruebe su conexión a internet, que el email y la password sean correctas</string>
    <string name="ERROR_LOGIN_EMPTY">Por favor ingrese Email y Contraseña</string>
</resources>
