<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/dialog_spinner_plans"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etNameTask"
        android:inputType="textMultiLine"
        android:lines="5"
        android:minLines="3"
        android:gravity="top|start"
        android:maxLines="7"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/tasks_description"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="2"
            android:text="@string/tasks_repeat"/>

        <Spinner
            android:id="@+id/dl_spinner_repeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"
            android:text="@string/tasks_reminder"/>

        <EditText
            android:id="@+id/dl_et_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/tasks_quantity"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/dl_spinner_remember"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/tasks_cancel"/>

        <Button
            android:id="@+id/btnCrearTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/tasks_create"/>

    </RelativeLayout>


</LinearLayout>