<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/dialogTaskStyle">

    <Spinner
        android:id="@+id/spPlans"
        android:layout_width="match_parent"
        android:background="@drawable/spinner_blue"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etDescTask"
        android:inputType="textMultiLine|textLongMessage"
        android:lines="5"
        android:minLines="3"
        android:textColor="#000"
        android:gravity="top|start"
        android:maxLines="7"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textColorHint="#FFF"
        android:hint="@string/tasks_description"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="1"
            android:text="@string/tasks_repeat"/>

        <EditText
            android:id="@+id/et_repeat"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/tasks_quantity"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"/>

        <Spinner
            android:id="@+id/spRepeat"
            android:background="@drawable/spinner_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="1"
            android:text="@string/tasks_reminder"/>

        <EditText
            android:id="@+id/etInterval"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/tasks_quantity"
            android:textAlignment="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spRemember"
            android:background="@drawable/spinner_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/tasks_cancel"/>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/tasks_create"/>

    </RelativeLayout>
</LinearLayout>

