<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">


    <LinearLayout
        android:id="@+id/ll_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#503180"
        android:padding="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrarse_titulo"
            android:textColor="#ffffff"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/user_nombre"
            android:hint="Nombre"
            android:textColor="#6bfff7"
            android:textColorHint="#52afaa"
            android:textAlignment="center"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/user_apellido"
            android:hint="Apellido"
            android:textColor="#6bfff7"
            android:textColorHint="#52afaa"
            android:textAlignment="center"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/user_email"
            android:hint="Email"
            android:textColor="#6bfff7"
            android:textColorHint="#52afaa"
            android:textAlignment="center"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/user_password_signIn"
            android:hint="Contraseña"
            android:textColor="#6bfff7"
            android:textColorHint="#52afaa"
            android:textAlignment="center"
            android:textSize="22sp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/user_password_signIn_confirm"
            android:hint="Repetir Contraseña"
            android:textColor="#6bfff7"
            android:textColorHint="#52afaa"
            android:textAlignment="center"
            android:textSize="22sp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_sing_in_registrarse"
                android:text="@string/Registrarse"
                android:textAllCaps="false"
                android:backgroundTint="#07912e"
                android:background="@color/colorAccent"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />
            <Button
                android:id="@+id/btn_sing_in_ingresar"
                android:text="@string/Ingresar"
                android:textAllCaps="false"
                android:backgroundTint="@color/colorPrimary"
                android:background="@color/colorAccent"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>